[gd_scene load_steps=12 format=2]

[ext_resource path="res://behaviors/creature.tscn" type="PackedScene" id=1]
[ext_resource path="res://behaviors/Avoidance.gd" type="Script" id=2]
[ext_resource path="res://behaviors/Boid.gd" type="Script" id=3]
[ext_resource path="res://behaviors/FPController.gd" type="Script" id=6]
[ext_resource path="res://behaviors/OffsetPursue.gd" type="Script" id=7]
[ext_resource path="res://behaviors/Controller.gd" type="Script" id=8]
[ext_resource path="res://behaviors/CameraController.gd" type="Script" id=9]
[ext_resource path="res://behaviors/root.gd" type="Script" id=16]

[sub_resource type="Environment" id=6]
background_mode = 1
ambient_light_color = Color( 0.392157, 0.392157, 0.392157, 1 )
ambient_light_energy = 2.0

[sub_resource type="Curve3D" id=2]
_data = {
"points": PoolVector3Array( 0, 0, 0, 0, 0, 0, -11.2065, -9.15527e-05, -29.797, 0, 0, 0, 0, 0, 0, -2.83316, 0.000137329, -9.18577, 0, 0, 0, 0, 0, 0, 16.3011, 23.6271, -8.24546, 0, 0, 0, 0, 0, 0, 46.7083, -5.34058e-05, -27.2299, 0, 0, 0, 0, 0, 0, 52.709, 22.523, -0.299791, 0, 0, 0, 0, 0, 0, 61.4845, 0, 43.691, 0, 0, 0, 0, 0, 0, 41.071, 9.53445, 8.45671, 0, 0, 0, 0, 0, 0, 2.29026, 0, 45.1004, 0, 0, 0, 0, 0, 0, 24.8938, -17.113, 20.9767 ),
"tilts": PoolRealArray( 0, 0, 0, 0, 0, 0, 0, 0, 0 )
}

[sub_resource type="Theme" id=9]

[node name="root" type="Spatial"]
script = ExtResource( 16 )

[node name="Camera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 36.1888, 7.1029, 48.8781 )
environment = SubResource( 6 )
far = 10000.0
script = ExtResource( 6 )

[node name="Camera Controller" type="Node" parent="Camera"]
script = ExtResource( 9 )
boid_camera_path = NodePath("../../camera follower")
boid_path = NodePath("../../creature/boid")

[node name="camera follower" type="KinematicBody" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 47.3768, 10.8322, 38.2638 )
script = ExtResource( 3 )

[node name="OffsetPursue" type="Node" parent="camera follower"]
script = ExtResource( 7 )
leader_node_path = NodePath("../../creature/boid")

[node name="creature" parent="." instance=ExtResource( 1 )]

[node name="Constrain" parent="creature/boid" index="6"]
weight = 1.0
center_path = NodePath("../../../Center")

[node name="Avoidance" type="Node" parent="creature/boid" index="9"]
script = ExtResource( 2 )

[node name="Seek" parent="creature/boid" index="10"]
target_node = NodePath("")

[node name="Arrive" parent="creature/boid" index="11"]
target_node = NodePath("")

[node name="Spatial" type="Spatial" parent="."]

[node name="Position3D" type="Position3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -90.1317 )

[node name="Path" type="Path" parent="."]
transform = Transform( 0.029265, 0, -0.999572, 0, 1, 0, 0.999572, 0, 0.029265, -27.7878, -4.57764e-05, -12.9541 )
curve = SubResource( 2 )

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 12.0512, 0.23691 )

[node name="DirectionalLight" type="DirectionalLight" parent="DirectionalLight"]
transform = Transform( 0.646177, 0.763187, 2.01452e-08, 6.97809e-09, -3.23043e-08, 1, 0.763187, -0.646177, -2.61999e-08, 0, 12.0512, 0.23691 )

[node name="Controls" type="Node" parent="."]
script = ExtResource( 8 )

[node name="GridContainer2" type="GridContainer" parent="Controls"]
margin_left = 562.0
margin_top = 23.0
margin_right = 798.0
margin_bottom = 188.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 2

[node name="RichTextLabel" type="RichTextLabel" parent="Controls/GridContainer2"]
margin_right = 116.0
margin_bottom = 17.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = SubResource( 9 )
text = "Distance:"

[node name="distance" type="HSlider" parent="Controls/GridContainer2"]
margin_left = 120.0
margin_right = 236.0
margin_bottom = 16.0

[node name="RichTextLabel2" type="RichTextLabel" parent="Controls/GridContainer2"]
margin_top = 21.0
margin_right = 116.0
margin_bottom = 38.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = SubResource( 9 )
text = "Radius:"

[node name="radius" type="HSlider" parent="Controls/GridContainer2"]
margin_left = 120.0
margin_top = 21.0
margin_right = 236.0
margin_bottom = 38.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="RichTextLabel3" type="RichTextLabel" parent="Controls/GridContainer2"]
margin_top = 42.0
margin_right = 116.0
margin_bottom = 59.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = SubResource( 9 )
text = "Amplitude:"

[node name="amplitude" type="HSlider" parent="Controls/GridContainer2"]
margin_left = 120.0
margin_top = 42.0
margin_right = 236.0
margin_bottom = 59.0
size_flags_horizontal = 3
size_flags_vertical = 3
max_value = 180.0

[node name="RichTextLabel4" type="RichTextLabel" parent="Controls/GridContainer2"]
margin_top = 63.0
margin_right = 116.0
margin_bottom = 80.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = SubResource( 9 )
text = "Frequency:
"
scroll_active = false

[node name="Frequency" type="HSlider" parent="Controls/GridContainer2"]
margin_left = 120.0
margin_top = 63.0
margin_right = 236.0
margin_bottom = 80.0
size_flags_horizontal = 3
size_flags_vertical = 3
max_value = 2.0
step = 0.01

[node name="RichTextLabel6" type="RichTextLabel" parent="Controls/GridContainer2"]
margin_top = 84.0
margin_right = 116.0
margin_bottom = 101.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = SubResource( 9 )
text = "Weight:
"
scroll_active = false

[node name="weight" type="HSlider" parent="Controls/GridContainer2"]
margin_left = 120.0
margin_top = 84.0
margin_right = 236.0
margin_bottom = 101.0
size_flags_horizontal = 3
size_flags_vertical = 3
max_value = 10.0
step = 0.1

[node name="RichTextLabel5" type="RichTextLabel" parent="Controls/GridContainer2"]
margin_top = 105.0
margin_right = 116.0
margin_bottom = 125.0
text = "Axis:
"
scroll_active = false

[node name="OptionButton" type="OptionButton" parent="Controls/GridContainer2"]
margin_left = 120.0
margin_top = 105.0
margin_right = 236.0
margin_bottom = 125.0

[node name="RichTextLabel7" type="RichTextLabel" parent="Controls/GridContainer2"]
margin_top = 129.0
margin_right = 116.0
margin_bottom = 145.0
text = "Damping"

[node name="damping" type="HSlider" parent="Controls/GridContainer2"]
margin_left = 120.0
margin_top = 129.0
margin_right = 236.0
margin_bottom = 145.0
max_value = 50.0

[node name="RichTextLabel8" type="RichTextLabel" parent="Controls/GridContainer2"]
margin_top = 149.0
margin_right = 116.0
margin_bottom = 165.0
text = "Angular Damping"

[node name="angularDamping" type="HSlider" parent="Controls/GridContainer2"]
margin_left = 120.0
margin_top = 149.0
margin_right = 236.0
margin_bottom = 165.0
max_value = 10.0
step = 0.1

[node name="Center" type="Position3D" parent="."]

[connection signal="value_changed" from="Controls/GridContainer2/distance" to="Controls" method="_on_distance_value_changed"]
[connection signal="value_changed" from="Controls/GridContainer2/radius" to="Controls" method="_on_radius_value_changed"]
[connection signal="value_changed" from="Controls/GridContainer2/amplitude" to="Controls" method="_on_amplitude_value_changed"]
[connection signal="value_changed" from="Controls/GridContainer2/Frequency" to="Controls" method="_on_Frequency_value_changed"]
[connection signal="value_changed" from="Controls/GridContainer2/weight" to="Controls" method="_on_weight_value_changed"]
[connection signal="item_selected" from="Controls/GridContainer2/OptionButton" to="Controls" method="_on_OptionButton_item_selected"]
[connection signal="value_changed" from="Controls/GridContainer2/damping" to="Controls" method="_on_damping_value_changed"]
[connection signal="value_changed" from="Controls/GridContainer2/angularDamping" to="Controls" method="_on_angularDamping_value_changed"]

[editable path="creature"]
